; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet6/extr_in6_gif.c_in6_gif_hashval.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet6/extr_in6_gif.c_in6_gif_hashval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in6_addr = type { i32 }

@FNV1_32_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.in6_addr*, %struct.in6_addr*)* @in6_gif_hashval to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @in6_gif_hashval(%struct.in6_addr* %0, %struct.in6_addr* %1) #0 {
  %3 = alloca %struct.in6_addr*, align 8
  %4 = alloca %struct.in6_addr*, align 8
  %5 = alloca i32, align 4
  store %struct.in6_addr* %0, %struct.in6_addr** %3, align 8
  store %struct.in6_addr* %1, %struct.in6_addr** %4, align 8
  %6 = load %struct.in6_addr*, %struct.in6_addr** %3, align 8
  %7 = load i32, i32* @FNV1_32_INIT, align 4
  %8 = call i32 @fnv_32_buf(%struct.in6_addr* %6, i32 4, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load %struct.in6_addr*, %struct.in6_addr** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @fnv_32_buf(%struct.in6_addr* %9, i32 4, i32 %10)
  ret i32 %11
}

declare dso_local i32 @fnv_32_buf(%struct.in6_addr*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
